--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -10,7 +10,7 @@ lang: zh-CN
 随着勇者们的探索，将一步步揭开层层迷雾，深入魔兽聚集的神木，追寻禁地的真相。
 
 ::: tip ✔️任务建议
-- 人物等级	12 - 20 级
+- 人物等级	12 - 23 级
 - 队伍任务  3 - 5人
 - 必要条件  无
 :::
@@ -51,7 +51,8 @@ lang: zh-CN
 :::
 ![11](https://user-images.githubusercontent.com/78347270/115095871-d177db00-9f5d-11eb-8d9c-60219f71be58.png)
 
-9. 司令部地牢，
+9. 司令部地牢，這裏開始打不過了...
 ::: warning 遇敌警告 遇敌率：高 怪物数量：3-8
 - 💂‍♂️ 地牢卫兵 LV20 *战栗攻击
 :::
+![13](https://user-images.githubusercontent.com/78347270/115097758-09375080-9f67-11eb-9dad-e3bffe429f99.png)
