--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -51,8 +51,25 @@ lang: zh-CN
 :::
 ![11](https://user-images.githubusercontent.com/78347270/115095871-d177db00-9f5d-11eb-8d9c-60219f71be58.png)
 
-9. 司令部地牢，這裏開始打不過了...
+9. 司令部地牢，找到囚犯丁（21.8）并对话，传送至牢房中央
 ::: warning 遇敌警告 遇敌率：高 怪物数量：3-8
 - 💂‍♂️ 地牢卫兵 LV20 *战栗攻击
 :::
-![13](https://user-images.githubusercontent.com/78347270/115097758-09375080-9f67-11eb-9dad-e3bffe429f99.png)
+
+囚犯丁地图所在位置📍 ![15](https://user-images.githubusercontent.com/78347270/115100314-c1b8c080-9f76-11eb-8af1-4c863e51241a.png)
+
+
+10. 与军官（25.16）对话 之后被传送至司令总部与指挥官（17.17）对话，
+
+获取【禁地通行证】 ![book](https://user-images.githubusercontent.com/78347270/115100517-2294c880-9f78-11eb-97c7-657ce9dfc3d0.png)
+
+![14](https://user-images.githubusercontent.com/78347270/115100442-9edadc00-9f77-11eb-8d23-66039c80326e.png)
+![16](https://user-images.githubusercontent.com/78347270/115100344-f75da980-9f76-11eb-85d0-1bfbfe2272a2.png)
+
+11. 持有【禁地通行证】前往芙蕾雅岛（314.425）与士兵兹瓦对话，可传送至神木禁地
+::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
+-  妖花 LV28-32 
+-  杀人蜂 LV28-32
+:::
+
+ 未完待续
