--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -66,10 +66,14 @@ lang: zh-CN
 ![14](https://user-images.githubusercontent.com/78347270/115100442-9edadc00-9f77-11eb-8d23-66039c80326e.png)
 ![16](https://user-images.githubusercontent.com/78347270/115100344-f75da980-9f76-11eb-85d0-1bfbfe2272a2.png)
 
+PS: 从司令总部出来可以直接到达里谢里雅堡
+![18](https://user-images.githubusercontent.com/78347270/115100617-b9618500-9f78-11eb-998b-081225560e8a.png)
+
+
 11. 持有【禁地通行证】前往芙蕾雅岛（314.425）与士兵兹瓦对话，可传送至神木禁地
 ::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
 -  妖花 LV28-32 
 -  杀人蜂 LV28-32
 :::
 
- 未完待续
+ 未完待续...
