--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -71,9 +71,13 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 
 
 11. 持有【禁地通行证】前往芙蕾雅岛（314.425）与士兵兹瓦对话，可传送至神木禁地
+位置📍在维诺亚村上方偏左，详见图片坐标
+
 ::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
 -  妖花 LV28-32 
 -  杀人蜂 LV28-32
 :::
+
+![17](https://user-images.githubusercontent.com/78347270/115108992-54288680-9fae-11eb-9e62-35f4c76134a0.png)
 
  未完待续...
