--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -17,41 +17,41 @@ lang: zh-CN
 
 ### 📝任务流程
 
-1. 里谢里雅堡后花园寻找脚步蹣跚的老妇人(30.24)并与其对话
+#### 1. 里谢里雅堡后花园寻找脚步蹣跚的老妇人(30.24)并与其对话
 ![1](https://user-images.githubusercontent.com/78347270/115094976-88725780-9f5a-11eb-8662-3be77e3cf784.png)
 
-2. 里谢里雅堡二楼左转尽头的图书馆内与看书入迷的老头子（1.74）对话，并得知任务线索【冒险之心永不歇止】
+#### 2. 里谢里雅堡二楼左转尽头的图书馆内与看书入迷的老头子（1.74）对话，并得知任务线索【冒险之心永不歇止】
 ![2](https://user-images.githubusercontent.com/78347270/115094960-7b556880-9f5a-11eb-81b0-2e86163c34f5.png)
 
-3. 前往法兰城内东南部的一处存储用仓库(192.177)，面对门口说出【冒险之心永不歇止】被传送入仓库内部
+#### 3. 前往法兰城内东南部的一处存储用仓库(192.177)，面对门口说出【冒险之心永不歇止】被传送入仓库内部
 ![4](https://user-images.githubusercontent.com/78347270/115095161-26feb880-9f5b-11eb-9b5c-40aaaebd6d86.png)
 
-4. 与守卫（11.14）对话，进入战斗，战斗结束被传入新的仓库内部
+#### 4. 与守卫（11.14）对话，进入战斗，战斗结束被传入新的仓库内部
 ::: danger 战斗警告
 👹守卫LV20 x 1, 血量约 800
 :::
 ![6](https://user-images.githubusercontent.com/78347270/115095355-f23f3100-9f5b-11eb-942c-11557d687ddd.png)
 
-5. 仓库内部调查某处（16.8）的水桶可以传送到秘密基地
+#### 5. 仓库内部调查某处（16.8）的水桶可以传送到秘密基地
 ![7](https://user-images.githubusercontent.com/78347270/115095598-cd978900-9f5c-11eb-9bb7-6aa31fc32195.png)
 
-6. 与秘密基地内与守卫（27.34）对话进入战斗 BOSS战参考第4步，战斗结束被传入秘密基地内部
+#### 6. 与秘密基地内与守卫（27.34）对话进入战斗 BOSS战参考第4步，战斗结束被传入秘密基地内部
 ::: danger 战斗警告
 👹守卫LV20 x 1, 血量约 800
 :::
 ![8](https://user-images.githubusercontent.com/78347270/115095589-c40e2100-9f5c-11eb-8fa7-68d3a1b85446.png)
 
-7. 调查秘密基地内部的门（34.12）进入神秘组织负责人房间，并与其对话，选择【是】进入地下通道入口
+#### 7. 调查秘密基地内部的门（34.12）进入神秘组织负责人房间，并与其对话，选择【是】进入地下通道入口
 ![10](https://user-images.githubusercontent.com/78347270/115095878-da68ac80-9f5d-11eb-88e5-6c2212d15abd.png)
 
-8. 穿过地下通道，到达最西边的楼梯口可进入司令部地牢
+#### 8. 穿过地下通道，到达最西边的楼梯口可进入司令部地牢
 ::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
 - 🕷️ 风蜘蛛 LV17-18 *酒醉攻击
 - 🐭 恶梦鼠 LV17-18 *单体冰冻
 :::
 ![11](https://user-images.githubusercontent.com/78347270/115095871-d177db00-9f5d-11eb-8d9c-60219f71be58.png)
 
-9. 司令部地牢，找到囚犯丁（21.8）并对话，传送至牢房中央
+#### 9. 司令部地牢，找到囚犯丁（21.8）并对话，传送至牢房中央
 ::: warning 遇敌警告 遇敌率：高 怪物数量：3-8
 - 💂‍♂️ 地牢卫兵 LV20 *战栗攻击
 :::
@@ -59,7 +59,7 @@ lang: zh-CN
 囚犯丁地图所在位置📍 ![15](https://user-images.githubusercontent.com/78347270/115100314-c1b8c080-9f76-11eb-8af1-4c863e51241a.png)
 
 
-10. 与军官（25.16）对话 之后被传送至司令总部与指挥官（17.17）对话，
+#### 10. 与军官（25.16）对话 之后被传送至司令总部与指挥官（17.17）对话，
 
 获取【禁地通行证】 ![book](https://user-images.githubusercontent.com/78347270/115100517-2294c880-9f78-11eb-97c7-657ce9dfc3d0.png)
 
@@ -70,7 +70,7 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 ![18](https://user-images.githubusercontent.com/78347270/115100617-b9618500-9f78-11eb-998b-081225560e8a.png)
 
 
-11. 持有【禁地通行证】前往芙蕾雅岛（314.425）与士兵兹瓦对话，可传送至神木禁地
+#### 11. 持有【禁地通行证】前往芙蕾雅岛（314.425）与士兵兹瓦对话，可传送至神木禁地
 位置📍在维诺亚村上方偏左，详见图片坐标
 
 ::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
@@ -79,5 +79,7 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 :::
 
 ![17](https://user-images.githubusercontent.com/78347270/115108992-54288680-9fae-11eb-9e62-35f4c76134a0.png)
+
+- ⚠️无法触发BOSS战
 
  未完待续...
