--- a/docs/leveling/10-20.md
+++ b/docs/leveling/10-20.md
@@ -17,7 +17,7 @@ lang: zh-CN
 ::: tip 练级要点
 - 位于法兰城内，需要黎明或黄昏时间对话灵堂的门卫进入
 - 等级限制10以上才可进入
-- 
+- 魔石值钱
 :::
 
 ::: details 🏞️ 亚留特村外区域（10 - 15）
@@ -39,7 +39,7 @@ lang: zh-CN
 - 随机宝箱，请带好钥匙🗝️
 :::
 
-::: details 🏛️ 法兰城内司令部地牢（15 - 20）
+::: details 🏛️ 法兰城内司令部地牢（15 - 20）  🔥🔥🔥
 
 参考任务[📜被历史抹去的禁地](/tasks/1.html#_8-穿过地下通道-到达最西边的楼梯口可进入司令部地牢)
 
@@ -47,5 +47,5 @@ lang: zh-CN
 
 ::: tip 练级要点
 - 恶魔老鼠会使用魔法伤害较高，建议优先杀
-- 遇敌率偏高
+- 遇敌率偏高，魔石12块！练级的宝地亏钱的圣地 👼
 :::
