--- a/docs/leveling/20-30.md
+++ b/docs/leveling/20-30.md
@@ -6,19 +6,20 @@ lang: zh-CN
 
 # 🗺️ 
 
-::: details 🏛️ 法兰城内司令部地牢大厅（20 - 25）
+::: details 🏛️ 法兰城内司令部地牢大厅（20 - 25） 🔥🔥🔥
 
 参考任务[📜被历史抹去的禁地](/tasks/1.html#_9-司令部地牢-找到囚犯丁-21-8-并对话-传送至牢房中央)
 
 ![13](https://user-images.githubusercontent.com/78347270/115151192-c2e90b00-a0a6-11eb-94a4-494b6e34d996.png)
 
 ::: tip 练级要点
-- 卫兵会战栗，普通攻击和防御，固定20级，怪物数量较多，建议组队
+- 卫兵会战栗，普通攻击和防御，固定20级
+- 怪物数量较多，追求效率的话建议组队
 - 遇敌率超高，基本一步一遇敌
 - 大厅中央有卫兵💂‍♂️NPC，对话可以直接遇敌8只满怪BOSS战
 :::
 
-::: details ⛺ 芙蕾雅神木禁域外围（地点在维诺亚村正上方）（20 - 25）
+::: details ⛺ 芙蕾雅神木禁域外围（地点在维诺亚村正上方）（20 - 25） 🔥🔥🔥
 
 ![17](https://user-images.githubusercontent.com/78347270/115108992-54288680-9fae-11eb-9e62-35f4c76134a0.png)
 
@@ -29,10 +30,29 @@ lang: zh-CN
 
 ::: details 🏜️ 索奇亚沙漠（20 - 25）
 
-![17](https://user-images.githubusercontent.com/78347270/115108992-54288680-9fae-11eb-9e62-35f4c76134a0.png)
+![1](https://user-images.githubusercontent.com/78347270/115169318-aa094580-a0f8-11eb-9c97-aca98d47c912.png)
+![2](https://user-images.githubusercontent.com/78347270/115169323-ad043600-a0f8-11eb-9165-1de3ecfc9931.png)
+
+- 乱射学习点
+![4](https://user-images.githubusercontent.com/78347270/115169327-b097bd00-a0f8-11eb-8e61-faba0d97ac6e.png)
 
 ::: tip 练级要点
 - 需要通过海底洞窟或者是传送至奇丽村，或者加纳村
-- 学习乱射的地点
+- 学习乱射的地点🏹
+- 怪物种类特别多，观光圣地，风景BGM也都不错的
 :::
 
+
+::: tip 练级要点
+- 杀人蜂攻击力偏高，如果弓手敏高建议优先击杀
+- 离村子非常近，补给方便
+:::
+
+::: details 🌄 角笛大风洞（20 - 25）
+
+![3](https://user-images.githubusercontent.com/78347270/115169325-aecdf980-a0f8-11eb-9967-cce449c87d72.png)
+
+::: tip 练级要点
+- 需要通过海底洞窟或者是传送至奇丽村，村东门口的东边
+- 黄螳螂攻略高，水蜘蛛还会魔法，不过魔石也是大的~
+:::
