--- a/docs/leveling/1-10.md
+++ b/docs/leveling/1-10.md
@@ -6,7 +6,7 @@ lang: zh-CN
 
 # 🗺️ 1 - 10级练级地点汇总
 
-::: details 🏰 法兰城外芙蕾雅地域, 伊尔村周边 （1 - 7级）
+::: details 🏰 法兰城外芙蕾雅地域, 伊尔村周边 (1 - 7级)
 
 ![2](https://user-images.githubusercontent.com/78347270/115149521-7817c500-a09f-11eb-85d9-0e10431e94dd.png)
 
