--- a/docs/leveling/10-20.md
+++ b/docs/leveling/10-20.md
@@ -7,7 +7,7 @@ lang: zh-CN
 # 🗺️ 10 - 20级练级地点汇总
 
 
-::: details 💀 法兰城灵堂（10 - 16）
+::: details 🏟️ 法兰城灵堂（10 - 16）
 
 法兰东庭园入口 -> 召唤之间 -> 灵堂，灵堂入口在最西北面（8.9）处旁边
 
