--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -75,14 +75,22 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 
 ![1](https://user-images.githubusercontent.com/78347270/115236453-5af1fd80-a156-11eb-8181-8e14b191fa9e.png)
 
+##### 士兵守卫的维诺亚海底洞窟入口
+![1](https://user-images.githubusercontent.com/78347270/115383114-6b66ae80-a210-11eb-9f01-274e46b9cecb.png)
+
+##### 通过洞窟来到另外一边的芙蕾雅岛域
+![7](https://user-images.githubusercontent.com/78347270/115383126-6dc90880-a210-11eb-8fbe-841a8b927c06.png)
+
+##### （314.425）与士兵兹瓦对话，可传送至神木禁地
+![8](https://user-images.githubusercontent.com/78347270/115383197-80dbd880-a210-11eb-8398-569faeb1bfa2.png)
+
 
 ::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
 -  妖花 LV28-32 
 -  杀人蜂 LV28-32
 :::
 
-![17](https://user-images.githubusercontent.com/78347270/115108992-54288680-9fae-11eb-9e62-35f4c76134a0.png)
 
 - ⚠️无法触发BOSS战
 
- 未完待续...
+- 未完待续
