--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -46,8 +46,8 @@ lang: zh-CN
 
 #### 8. 穿过地下通道，到达最西边的楼梯口可进入司令部地牢
 ::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
-- 🕷️ 风蜘蛛 LV17-18 *酒醉攻击
-- 🐭 恶梦鼠 LV17-18 *单体冰冻
+- 🕷️ 风蜘蛛 LV16-18 *酒醉攻击
+- 🐭 恶梦鼠 LV16-18 *单体冰冻
 :::
 ![11](https://user-images.githubusercontent.com/78347270/115095871-d177db00-9f5d-11eb-8d9c-60219f71be58.png)
 
@@ -71,11 +71,17 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 
 
 #### 11. 持有【禁地通行证】前往芙蕾雅岛（314.425）与士兵兹瓦对话，可传送至神木禁地
-位置📍在维诺亚村西北方，详见图片坐标
+
+::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
+-  妖花 LV28-32 
+-  杀人蜂 LV28-32
+:::
+
+##### 位置📍在维诺亚村西北方，详见图片坐标
 
 ![1](https://user-images.githubusercontent.com/78347270/115236453-5af1fd80-a156-11eb-8181-8e14b191fa9e.png)
 
-##### 士兵守卫的维诺亚海底洞窟入口
+##### 士兵守卫的维诺亚海底洞窟入口（注意这里需要角色35级以上才可以通过）
 ![1](https://user-images.githubusercontent.com/78347270/115383114-6b66ae80-a210-11eb-9f01-274e46b9cecb.png)
 
 ##### 通过洞窟来到另外一边的芙蕾雅岛域
@@ -83,12 +89,6 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 
 ##### （314.425）与士兵兹瓦对话，可传送至神木禁地
 ![8](https://user-images.githubusercontent.com/78347270/115383197-80dbd880-a210-11eb-8398-569faeb1bfa2.png)
-
-
-::: warning 遇敌警告 遇敌率：中 怪物数量：3-8
--  妖花 LV28-32 
--  杀人蜂 LV28-32
-:::
 
 
 - ⚠️无法触发BOSS战
