--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -61,7 +61,15 @@ lang: zh-CN
 
 #### 10. 与军官（25.16）对话 之后被传送至司令总部与指挥官（17.17）对话，
 
-获取【禁地通行证】 ![book](https://user-images.githubusercontent.com/78347270/115100517-2294c880-9f78-11eb-97c7-657ce9dfc3d0.png)
+
+::: danger 🚨 別亂丟警告！！！
+- 获取【禁地通行证】，不要乱丢！否则可能无法继续任务或者重新接任务，请谨慎！
+- 持有【禁地通行证】，将无法通过【冒险之心永不歇止】进入仓库！
+:::
+
+获取【禁地通行证】 
+- ![book](https://user-images.githubusercontent.com/78347270/115100517-2294c880-9f78-11eb-97c7-657ce9dfc3d0.png)
+
 
 ![14](https://user-images.githubusercontent.com/78347270/115100442-9edadc00-9f77-11eb-8d23-66039c80326e.png)
 ![16](https://user-images.githubusercontent.com/78347270/115100344-f75da980-9f76-11eb-85d0-1bfbfe2272a2.png)
