--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -99,6 +99,12 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 ![8](https://user-images.githubusercontent.com/78347270/115383197-80dbd880-a210-11eb-8398-569faeb1bfa2.png)
 
 
-- ⚠️无法触发BOSS战
+#### 12. 寻找【芙蕾雅神木】（311.348）进入神木内部
 
-- 未完待续
+![10000](https://user-images.githubusercontent.com/78347270/115401245-28630600-a225-11eb-9b14-c254630e6074.png)
+
+#### 13. 【芙蕾雅神木底部】随机迷宫寻找楼梯并找到底部的黄色水晶，进入【神木之心】
+
+![123123](https://user-images.githubusercontent.com/78347270/115401912-e25a7200-a225-11eb-993e-319562b4d08e.png)
+
+- 找到老爷爷并对话⚠️无法触发BOSS战
