--- a/docs/leveling/30-40.md
+++ b/docs/leveling/30-40.md
@@ -18,3 +18,15 @@ lang: zh-CN
 - 怪物数量非常多，但是遇敌率偏低
 - 迷宫地图不大，有宝箱
 :::
+
+::: details 🏔️ 雪山（35 - 45）
+
+![12312312](https://user-images.githubusercontent.com/78347270/115526801-60248900-a2cb-11eb-8f14-ef3a1c36c0e3.png)
+
+![123123123](https://user-images.githubusercontent.com/78347270/115526808-631f7980-a2cb-11eb-856f-7e61bad31df3.png)
+
+
+::: tip 练级要点
+- 丧尸特别硬，怪多的情况下非常危险，建议组队
+- 迷宫树木有时候会挡住楼梯，有宝箱
+:::
