--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -91,7 +91,7 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 
 ![1](https://user-images.githubusercontent.com/78347270/115236453-5af1fd80-a156-11eb-8181-8e14b191fa9e.png)
 
-##### 士兵守卫的维诺亚海底洞窟入口（注意这里需要角色35级以上才可以通过）
+##### 士兵守卫的维诺亚海底洞窟入口（注意这里需要角色25级以上才可以通过）
 ![1](https://user-images.githubusercontent.com/78347270/115383114-6b66ae80-a210-11eb-9f01-274e46b9cecb.png)
 
 ##### 通过洞窟来到另外一边的芙蕾雅岛域
@@ -110,3 +110,5 @@ PS: 从司令总部出来可以直接到达里谢里雅堡
 ![123123](https://user-images.githubusercontent.com/78347270/115401912-e25a7200-a225-11eb-993e-319562b4d08e.png)
 
 - 找到老爷爷并对话⚠️无法触发BOSS战
+
+> 特别鸣谢 魔力宝贝台服怀旧永恒初心群(893519779) @青叶
