--- a/docs/announces/2.md
+++ b/docs/announces/2.md
@@ -3,7 +3,7 @@ title: '封测结束公告'
 lang: zh-CN
 ---
 
-## 📅 封测开启公告
+## 📅 封测结束公告
 
 ```
 此致 親愛的法蘭城勇者：
@@ -40,6 +40,9 @@ lang: zh-CN
 官方製作組
 
 ```
+
+![174131120_237655308149281_3733046231492249151_n](https://user-images.githubusercontent.com/78347270/115936930-8ddb1f00-a4d1-11eb-8102-e8ddb88cb73f.jpg)
+
 
 #### 参考链接1： [魔力宝贝：永恒初心](https://cg.originmood.com/NewsContent/zh_TW/mlbb_notice_4763.html)
 #### 参考链接2： [Facebook 魔力宝贝：永恒初心](https://www.facebook.com/cg.originmood/posts/237656611482484)
