--- a/docs/announces/3.md
+++ b/docs/announces/3.md
@@ -1,15 +1,16 @@
 ---
-title: '封测结束公告'
+title: '最新官方公告'
 lang: zh-CN
 ---
 
-## 📅 封测开启公告
+## 💡 Facebook最新官方公告
 
 ```
 致 法蘭城勇者們：
 
 感謝大家參與封測且給予了許多支持和建議。
-💕目前團隊正全力為公測做準備。遊戲還有部分問題需要修復，
+💕目前團隊正全力為公測做準備。
+遊戲還有部分問題需要修復，
 包括理應封測便修復完成的文字顯示問題，
 目前發現確實仍存在部份文字無法顯示，
 將在正式上線時修復。🔧
