修改宠物详细

--- a/docs/pets/001.md
+++ b/docs/pets/001.md
@@ -9,7 +9,7 @@ lang: zh-CN
 
 ![虎人](https://user-images.githubusercontent.com/78347270/115937668-69804200-a4d3-11eb-88d8-411c3fb1a650.gif) 
 
-> 2级普通图鉴 ![0014961](https://user-images.githubusercontent.com/78347270/115963859-4ea5e000-a55c-11eb-84e2-5fee99d1fbb6.gif) , 可封印 ✅ 
+> 野兽系 , 2级普通图鉴 ![0014961](https://user-images.githubusercontent.com/78347270/115963859-4ea5e000-a55c-11eb-84e2-5fee99d1fbb6.gif) , 可封印 ✅ 
 
 
 ### 💪 能力数值
@@ -22,7 +22,28 @@ lang: zh-CN
 | 敏捷      | 31  <Stars :number="3" />  | 
 | 魔法      | 21  <Stars :number="2" />   | 
 
-- 开发中 🏗️
+
+### ⚖️ 属性
+
+
+<Progress earth :number="3" />
+
+<Progress water :number="0" />
+
+<Progress fire :number="0" />
+
+<Progress wind :number="7" />
+
+
+### 📿 盗窃物品
+
+> ##### 美丽项链 ![001](https://user-images.githubusercontent.com/78347270/115979435-e3422980-a5c0-11eb-8a80-a447fdf4a46c.gif)
+> 令人觉得华丽的首饰, 混乱+2, 耐久300左右
+
+
+### 👶 1级出现点
+
+无
 
 
 
