野兽系宠物详细补充

--- a/docs/pets/011.md
+++ b/docs/pets/011.md
@@ -9,7 +9,7 @@ lang: zh-CN
 
 ![猫熊](https://user-images.githubusercontent.com/78347270/115937691-6edd8c80-a4d3-11eb-90d2-c4e7fddd8e9b.gif) 
 
-> 野兽系 , 7级金卡图鉴 ![0014961](https://user-images.githubusercontent.com/78347270/115963860-4f3e7680-a55c-11eb-8bb8-7e58a5ca9621.gif) , 可封印 ✅ 
+> 野兽系 , 7级金卡图鉴 ![0014961](https://user-images.githubusercontent.com/78347270/115963860-4f3e7680-a55c-11eb-8bb8-7e58a5ca9621.gif) , 不可封印 :x: 
 
 
 ### 💪 能力数值
@@ -34,6 +34,10 @@ lang: zh-CN
 
 <Progress wind :number="0" />
 
+### ✨ 技能栏 <Strong>7个</Strong>
+
+- 攻击
+- 防御
 
 ### 👶 1级出现点
 
