--- a/docs/tasks/1.md
+++ b/docs/tasks/1.md
@@ -11,7 +11,7 @@ lang: zh-CN
 在阳光普照的里谢里雅堡后花园，因一句“冒险之心永不歇止”牵扯出法兰王国的古代秘辛。
 随着勇者们的探索，将一步步揭开层层迷雾，深入魔兽聚集的神木，追寻禁地的真相。
 
-::: tip ✔️任务建议
+::: tip ✅任务建议
 - 人物等级	12 - 23 级
 - 队伍任务  3 - 5人
 - 必要条件  无
