--- a/docs/announces/4.md
+++ b/docs/announces/4.md
@@ -17,7 +17,8 @@ lang: zh-CN
 > 本人武装骷髅派 ☠️！帅帅帅 
 
 ### 目前选项战况
-![QQ图片20210425204132](https://user-images.githubusercontent.com/78347270/115992080-b6b10080-a606-11eb-892e-216c43a76a11.png)
+![QQ截图20210426090523](https://user-images.githubusercontent.com/78347270/116014114-9a48ae80-a66e-11eb-8954-d02257b326d3.png)
 
+#### 目前领先的还是 😮【<Strong>武装骷髅</Strong>】
 
 #### 参考链接2： [Facebook 魔力宝贝：永恒初心 【趣味投票】](https://www.facebook.com/cg.originmood/posts/240763184505160)
