--- a/docs/pets/046.md
+++ b/docs/pets/046.md
@@ -1,10 +1,52 @@
 ---
-title: '宠物大全'
+title: '小蝙蝠'
 lang: zh-CN
 
 ---
 
 
-## 宠物详细 :bat:
+## 小蝙蝠
 
-- 开发中 🏗️
+![小蝙蝠](https://user-images.githubusercontent.com/78347270/115859782-9bf65480-a46b-11eb-9495-7d7c2da9496b.gif) 
+
+> 飞行系 , 1级普通图鉴<Card /> , 可封印 ✅ 
+
+
+### 💪 能力数值
+
+| 总档次       | 105            |
+| :----------- |:-------------:|
+| 体力      | 11   <Stars :number="1" />  |
+| 力量      | 26   <Stars :number="2.5" />  |
+| 防御      | 16  <Stars :number="1.5" />  | 
+| 敏捷      | 31  <Stars :number="3" />  | 
+| 魔法      | 21  <Stars :number="2" />   | 
+
+
+### ⚖️ 属性
+
+
+<Progress earth :number="6" />
+
+<Progress water :number="4" />
+
+<Progress fire :number="0" />
+
+<Progress wind :number="0" />
+
+### ✨ 技能栏 <Strong>10个</Strong>
+
+- 攻击
+- 防御
+
+### 👶 1级出现点
+
+- [☘️新手任务](/tasks/0) 随机获取
+
+---
+title: '扫把蝙蝠'
+lang: zh-CN
+
+---
+
+
