--- a/docs/pets/186.md
+++ b/docs/pets/186.md
@@ -1,38 +1,38 @@
 ---
-title: '楸型虫'
+title: '独角仙'
 lang: zh-CN
 
 ---
 
 
-## 楸型虫
+## 独角仙
 
-![楸型虫](https://user-images.githubusercontent.com/78347270/115956346-222b9d00-a537-11eb-99c4-ca98bece351f.gif) 
+![独角仙](https://user-images.githubusercontent.com/78347270/115956346-222b9d00-a537-11eb-99c4-ca98bece351f.gif) 
 
-> 昆虫系 , 4级普通图鉴<Card /> , 可封印 ✅ 
+> 昆虫系 , 5级银卡图鉴<Card :type="1" /> , 可封印 ✅ 
 
 
 ### 💪 能力数值
 
 | 总档次       | 115            |
 | :----------- |:-------------:|
-| 体力      | 15   <Stars :number="1.5" />  |
-| 力量      | 39   <Stars :number="4" />  |
-| 防御      | 29   <Stars :number="3" />  | 
-| 敏捷      | 14  <Stars :number="1.5" />  | 
-| 魔法      | 18  <Stars :number="2" />   | 
+| 体力      | 18   <Stars :number="2" />  |
+| 力量      | 41   <Stars :number="4" />  |
+| 防御      | 34   <Stars :number="3.5" />  | 
+| 敏捷      | 9  <Stars :number="1" />  | 
+| 魔法      | 14  <Stars :number="1.5" />   | 
 
 
 ### ⚖️ 属性
 
 
-<Progress earth :number="0" />
+<Progress earth :number="2" />
 
 <Progress water :number="0" />
 
-<Progress fire :number="8" />
+<Progress fire :number="0" />
 
-<Progress wind :number="2" />
+<Progress wind :number="8" />
 
 ### ✨ 技能栏 <Strong>7个</Strong>
 
