修复，新增部分植物

--- a/docs/pets/1022.md
+++ b/docs/pets/1022.md
@@ -1,48 +1,48 @@
 ---
-title: '僵尸'
+title: '改造僵尸'
 lang: zh-CN
 
 ---
 
 <RouterBack />
 
-## 僵尸
+## 改造僵尸
 
-![僵尸](https://user-images.githubusercontent.com/78347270/115939414-0c878a80-a4d9-11eb-8742-1cefb0acd4bc.gif) 
+![改造僵尸](https://user-images.githubusercontent.com/78347270/115939414-0c878a80-a4d9-11eb-8742-1cefb0acd4bc.gif) 
 
-> 不死系 , 2级普通图鉴 <Card /> , 可封印 ✅ 
+> 不死系, 不可封印 :x: 
 
 
 ### 💪 能力数值
 
-| 总档次       | 105            |
+| 总档次       | 125            |
 | :----------- |:-------------:|
-| 体力      | 37   <Stars :number="3.5" />  |
-| 力量      | 32   <Stars :number="3" />  |
-| 防御      | 12  <Stars :number="1" />  | 
-| 敏捷      | 12  <Stars :number="1" />  | 
-| 魔法      | 12  <Stars :number="1" />   | 
+| 体力      | 41   <Stars :number="4" />  |
+| 力量      | 36   <Stars :number="3.5" />  |
+| 防御      | 16  <Stars :number="1.5" />  | 
+| 敏捷      | 16  <Stars :number="1.5" />  | 
+| 魔法      | 16  <Stars :number="1.5" />   | 
 
 
 ### ⚖️ 属性
 
 
-<Progress earth :number="4" />
+<Progress earth :number="3" />
 
 <Progress water :number="0" />
 
 <Progress fire :number="0" />
 
-<Progress wind :number="6" />
+<Progress wind :number="7" />
 
 ### ✨ 技能栏 <Strong>9个</Strong>
 
 - 攻击
-- 诸刃 Lv1
+- 防御
 
 ### 👶 1级出现点
 
-- 奇利村域阿鲁巴斯洞窟最上层(阿鲁巴斯前的楼梯上去后全区域出现)； 请参考任务 :scroll: 誘拐事件
+- 参考任务: :scroll: 宠物改造计划获取
 
 
 
