任务修改，新增

--- a/docs/leveling/1-10.md
+++ b/docs/leveling/1-10.md
@@ -69,7 +69,7 @@ lang: zh-CN
 
 ::: details 🏛️ 法兰城内司令部地牢（15 - 20）  🔥🔥🔥
 
-参考任务[📜被历史抹去的禁地](/tasks/1.html#_8-穿过地下通道-到达最西边的楼梯口可进入司令部地牢)
+参考任务[📜被抹去的大陆](/tasks/1.html#_8-穿过地下通道-到达最西边的楼梯口可进入司令部地牢)
 
 ![12](https://user-images.githubusercontent.com/78347270/115151190-c086b100-a0a6-11eb-9270-215da618edaa.png)
 
