--- a/docs/leveling/20-30.md
+++ b/docs/leveling/20-30.md
@@ -8,7 +8,7 @@ lang: zh-CN
 
 ::: details 🏛️ 法兰城内司令部地牢大厅（20 - 25） 🔥🔥🔥
 
-参考任务[📜被历史抹去的禁地](/tasks/1.html#_9-司令部地牢-找到囚犯丁-21-8-并对话-传送至牢房中央)
+参考任务[📜被抹去的大陆](/tasks/1.html#_9-司令部地牢-找到囚犯丁-21-8-并对话-传送至牢房中央)
 
 ![13](https://user-images.githubusercontent.com/78347270/115151192-c2e90b00-a0a6-11eb-94a4-494b6e34d996.png)
 
