--- a/docs/leveling/30-40.md
+++ b/docs/leveling/30-40.md
@@ -8,7 +8,7 @@ lang: zh-CN
 
 ::: details 🌲 芙蕾雅神木底部（30 - 35）
 
-参考任务[📜被历史抹去的禁地](/tasks/1.html#_12-寻找【芙蕾雅神木】-311-348-进入神木内部)
+参考任务[📜被抹去的大陆](/tasks/1.html#_12-寻找【芙蕾雅神木】-311-348-进入神木内部)
 
 ![1321](https://user-images.githubusercontent.com/78347270/115402512-6ca2d600-a226-11eb-8cb9-56557dc3f81a.png)
 
