--- a/docs/pets/061.md
+++ b/docs/pets/061.md
@@ -43,7 +43,7 @@ lang: zh-CN
 
 ### 👶 1级出现点
 
-- 芙蕾雅岛 神木禁地內（331,282）， 参考任务 :scroll: [禁地寻踪](/tasks/1);
+- 芙蕾雅岛 神木禁地內（331,282）， 参考任务 :scroll: [被抹去的大陆](/tasks/1);
 
 
 
