--- a/docs/pets/083.md
+++ b/docs/pets/083.md
@@ -42,7 +42,7 @@ lang: zh-CN
 
 ### 👶 1级出现点
 
-- 芙蕾雅岛 神木禁地內， 参考坐标（242,373）， 参考任务 :scroll: [禁地寻踪](/tasks/1);
+- 芙蕾雅岛 神木禁地內， 参考坐标（242,373）， 参考任务 :scroll: [被抹去的大陆](/tasks/1);
 
 
 
