任务修改，回到头部

--- a/docs/tasks/0.md
+++ b/docs/tasks/0.md
@@ -1,5 +1,5 @@
 ---
-title: '新手任务'
+title: '死者的戒指'
 lang: zh-CN
 
 ---
@@ -7,38 +7,30 @@ lang: zh-CN
 <RouterBack />
 
 
-# 📜 新手任务 - 
+# 📜 死者的戒指
 
-
-::: tip ✅任务建议
-- 人物等级	1 级
-- 必要条件  无
-:::
+- 推荐等级 1 级
+- 必要条件 无
 
 ### 📝任务流程
 
-#### 1. 召唤之间的右手边与王宫召唤士盖兹（19, 6）对话，并被传送到回廊获得试用武器
-
-![1](https://user-images.githubusercontent.com/78347270/115993070-05ad6480-a60c-11eb-8551-b2f007a9b5b4.png)
-
-![2](https://user-images.githubusercontent.com/78347270/115993075-1067f980-a60c-11eb-97eb-b813a5dfec0b.png)
-
-::: tip 温馨提示
-- 如果没有获得合适的武器的情况下，可以登出之后重复此步骤可以随机获取其他武器。
+#### 1. 召唤之间的右手边与王宫召唤士盖兹（19, 6）对话，并被传送到回廊获得试用武器。
+::: tip ✅ 温馨提示
+- 如果没有获得合适的武器的情况下，可以重复此步骤获取其他武器。
 - 如果不想继续做新手任务的情况下，可以在召唤间的左手边对话召唤间管理人，之后选择【是】，下次登出就会回到法兰城内。
 :::
+![1](https://user-images.githubusercontent.com/78347270/115993070-05ad6480-a60c-11eb-8551-b2f007a9b5b4.png)
 
 ![3](https://user-images.githubusercontent.com/78347270/115993113-4a390000-a60c-11eb-8803-168bf4aa450d.png)
 
-#### 2. 按【黄色箭头】指示通过回廊的楼梯口，进入灵堂，并到达测试者(54, 2)对话。【是✅】【否❌】
+#### 2. 按【黄色箭头】指示通过回廊的楼梯口，进入灵堂，并到达测试者(54, 2)对话。
+> 【是✅】【否❌】
 
 ![4](https://user-images.githubusercontent.com/78347270/115993171-92f0b900-a60c-11eb-9cad-24cc83119c7c.png)
 
 ![5](https://user-images.githubusercontent.com/78347270/115993213-cfbcb000-a60c-11eb-9f0f-97e764754b04.png)
 
 ##### 获取死者之戒指 💍
-![6](https://user-images.githubusercontent.com/78347270/115993277-13171e80-a60d-11eb-9185-5f7214948100.png)
-
 ::: warning 🚨 丢弃警告
 这里不能登出，否则戒指会消失，必须持有戒指走回召唤士盖兹处。
 :::
@@ -51,8 +43,23 @@ lang: zh-CN
 #### 4. 走出谒见之间来到里谢里雅堡2楼，往南走可以看到两位【守卫】亚瑟尔或者乔金对话，可以获取新手任务奖励品
 
 ![8](https://user-images.githubusercontent.com/78347270/115993492-f16a6700-a60d-11eb-9b64-bec6f9cebfd0.png)
-
 - OK绷 恢复50左右血量
 - 平民袍
 - 平民鞋
 - 小蝙蝠 or 使魔 x 1只
+
+
+
+| 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
+| :---- |:-------------:|:-------------:|:-------------:|:-------------:|
+| ![CG014854](https://user-images.githubusercontent.com/78347270/116801034-2102fd00-ab41-11eb-91cd-04c483df1824.gif) |  死者的戒指  |  【黄泉抗拒者】称号  |  :x:  |  :x:  |
+| ![CG015602](https://user-images.githubusercontent.com/78347270/116801033-2102fd00-ab41-11eb-90b3-69a0ce5d77f5.gif) |  赏赐状  |  -  |  :x:  |  :x:  |
+| ![CG014948](https://user-images.githubusercontent.com/78347270/116801032-206a6680-ab41-11eb-812d-9b720ef378a9.gif) |  OK绷  | 回复40左右HP |  :x:  |  :x:  |
+| ![CG014122](https://user-images.githubusercontent.com/78347270/116801031-206a6680-ab41-11eb-8880-44f0521891a7.gif) |  国民袍  | 防御+2 |  :x:  |  :x:  |
+| ![CG014166](https://user-images.githubusercontent.com/78347270/116801029-1fd1d000-ab41-11eb-8aa6-837803c6a023.gif) |  国民靴  | 防御+1 |  :x:  |  :x:  |
+| ![CG014072](https://user-images.githubusercontent.com/78347270/116801030-1fd1d000-ab41-11eb-895a-3d100dbaf701.gif) |  国民衣  | 防御+2 |  :x:  |  :x:  |
+| ![CG014164](https://user-images.githubusercontent.com/78347270/116801026-1ea0a300-ab41-11eb-9226-74845df8eb6e.gif) |  国民鞋  | 防御+1 敏捷+1 |  :x:  |  :x:  |
+
+
+
+
