--- a/docs/tasks/0.md
+++ b/docs/tasks/0.md
@@ -11,7 +11,7 @@ lang: zh-CN
 
 - 推荐等级 1 级
 - 必要条件 无
-
+- 任务奖励 OK绷, 平民袍, 平民鞋, 小蝙蝠 or 使魔
 ### 📝任务流程
 
 #### 1. 召唤之间的右手边与王宫召唤士盖兹（19, 6）对话，并被传送到回廊获得试用武器。
@@ -47,7 +47,6 @@ lang: zh-CN
 - 平民袍
 - 平民鞋
 - 小蝙蝠 or 使魔 x 1只
-
 
 
 | 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
