--- a/docs/tasks/0.md
+++ b/docs/tasks/0.md
@@ -9,9 +9,9 @@ lang: zh-CN
 
 # 📜 死者的戒指
 
-- 推荐等级 1 级
-- 必要条件 无
-- 任务奖励 OK绷, 平民袍, 平民鞋, 小蝙蝠 or 使魔
+- 推荐等级：1 级
+- 必要条件：无
+- 任务奖励：OK绷, 平民袍, 平民鞋, 小蝙蝠 or 使魔
 ### 📝任务流程
 
 #### 1. 召唤之间的右手边与王宫召唤士盖兹（19, 6）对话，并被传送到回廊获得试用武器。
