--- a/docs/tasks/2.md
+++ b/docs/tasks/2.md
@@ -8,10 +8,9 @@ lang: zh-CN
 
 # 📜 H7N9防疫宣传任务
 
-::: tip ✅任务建议
-- 人物等级	1级
-- 必要条件  无
-:::
+- 人物等级：1级
+- 必要条件：无
+- 任务奖励：口罩
 
 ### 📝任务流程
 
@@ -19,5 +18,7 @@ lang: zh-CN
 ![1](https://user-images.githubusercontent.com/78347270/115132211-f8570f80-a038-11eb-81dd-9600413f6483.png)
 
 获取【防疫小口罩】
-- ![2](https://user-images.githubusercontent.com/78347270/115132242-453ae600-a039-11eb-8bfb-d4bbefac45cd.png)
-- ![3](https://user-images.githubusercontent.com/78347270/115132243-45d37c80-a039-11eb-812c-3b7268a9c0f6.png)
+
+| 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
+| :---- |:-------------:|:-------------:|:-------------:|:-------------:|
+| ![15665](https://user-images.githubusercontent.com/78347270/117085091-d32a0700-ad83-11eb-82f0-940176b3fc63.gif) |  防疫小口罩  |  防御+1 魅力-1  |  :x:  |  :x:  |
