--- a/docs/tasks/3.md
+++ b/docs/tasks/3.md
@@ -8,11 +8,26 @@ lang: zh-CN
 
 # 📜 城内的地下迷宫
 
-::: tip ✅任务建议
-- 人物等级	10级
-- 必要条件  无
-:::
+- 人物等级：10级
+- 必要条件：蛋包饭 x 1
+- 任务奖励：宝箱
+> 随机为1 ~ 2级宝石、原料、装备、水晶、魔石、钥匙、黑钥匙、白钥匙、古钱、布斯特药草?、金币(金额随机)
 
 ### 📝任务流程
 
-- 制作中 🏗️
+#### 1. 从里谢里雅堡东花园进入楼梯(47,85)到达召唤之间，清晨或黄昏时与士兵伊岱鲁(9,8)交谈，LV10以上可以进入封印之间；进入封印之间内的黄色传送石到达城内的地下迷宫
+
+#### 2. 在迷宫内找寻随机出现的调查员421，跟他交谈以"蛋包饭"换取"红色三菱镜"
+::: error 🚨 任务注意
+- 全队只需1个【蛋包饭】，1组也会被直接收走。
+- 全队保证身上有空格空格。
+:::
+
+#### 3. 到迷宫最底层进入红色传送石，传送到正中央的房间与【阴影】(9,5)战斗
+
+
+
+
+| 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
+| :---- |:-------------:|:-------------:|:-------------:|:-------------:|
+| ![15611](https://user-images.githubusercontent.com/78347270/117137870-4f086b80-ade5-11eb-844e-cf61282ec43b.gif) |  红色三菱镜  |  -  |  :x:  |  :x:  |
