--- a/docs/tasks/4.md
+++ b/docs/tasks/4.md
@@ -6,13 +6,27 @@ lang: zh-CN
 
 <RouterBack />
 
-# 📜 毕安札的送礼
+# 📿 毕安札的送礼
 
-::: tip ✅任务建议
-- 人物等级	10级
-- 必要条件  无
-:::
+- 人物等级：10级
+- 必要条件：无
+- 任务奖励：饰品
 
 ### 📝任务流程
 
-- 制作中 🏗️
+#### 1. 法兰城里谢里雅堡正门桥左手边的第一间房【毕安札的家】(132，132)，跟罗珊娜对话得知【阿比安吉】的线索。（可以省略）
+
+#### 2. 地下的灵堂(9,8)，在清晨或黄昏时与士兵伊岱鲁交谈，LV10以上可以进入封印之间。
+
+#### 3. 在城内的地下迷宫裡找随机出现的士兵【毕安札】，跟他对话说【阿比安吉】，得到【誓言的念珠】
+
+#### 4. 回到法兰城毕安札的家，把【誓言的念珠】交给罗珊娜，换取【祈祷的耳饰】
+
+| 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
+| :---- |:-------------:|:-------------:|:-------------:|:-------------:|
+| ![14773](https://user-images.githubusercontent.com/78347270/117137526-d0133300-ade4-11eb-9d23-35743042b0f2.gif) |  誓言的念珠  |  -  |  :x:  |  :x:  |
+| ![14600](https://user-images.githubusercontent.com/78347270/117137530-d0abc980-ade4-11eb-91f1-1e764017da2c.gif) |  祈祷的耳饰  |  生命+25 ~ 35  |  ✅  |  :x:  |
+
+
+
+
