--- a/docs/tasks/5.md
+++ b/docs/tasks/5.md
@@ -20,3 +20,8 @@ lang: zh-CN
 ![2](https://user-images.githubusercontent.com/78347270/115993721-085d8900-a60f-11eb-90f8-6544281428d7.png)
 
 - 以100G魔币购买10个铜钥匙 🔑
+
+
+| 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
+| :---- |:-------------:|:-------------:|:-------------:|:-------------:|
+| ![15583](https://user-images.githubusercontent.com/78347270/117138373-ea014580-ade5-11eb-96f8-251e33155c68.gif) |  铜钥匙  |  开启宝箱  |  ✅  |  ✅  |
