--- a/docs/tasks/2.md
+++ b/docs/tasks/2.md
@@ -14,7 +14,7 @@ lang: zh-CN
 
 ### 📝任务流程
 
-1. 里谢里雅堡左边喷泉的桌子边找H7N9防疫宣传员(26.77)并与其对话
+#### 1. 里谢里雅堡左边喷泉的桌子边找H7N9防疫宣传员(26.77)并与其对话
 ![1](https://user-images.githubusercontent.com/78347270/115132211-f8570f80-a038-11eb-81dd-9600413f6483.png)
 
 获取【防疫小口罩】
