--- a/docs/announces/20210506.md
+++ b/docs/announces/20210506.md
@@ -15,6 +15,51 @@ lang: zh-CN
 開服將至，我們特整理了更為詳細的上線版本內容。
 📜除之前預告過的更新外，
 現在為大家呈上更多內容資訊：
+
+🔶伺服器🔶
+同時開啟永恆雙子、永恆天秤、永恆獅子各20分流。
+🔶經驗&聲望🔶
+1.戰鬥系以及生產系戰鬥經驗獲取調整為約原版本兩倍。
+2.戰鬥系以及生產系獲取之技能經驗為原版本兩倍。
+3.戰鬥系每日聲望獲取之上限為原版本兩倍。
+🔶職業🔶
+1.角色職業除舞者、盜賊、爆彈師、偵探、
+仙人、刻印師、紡織工外（上屬職業之專屬技能亦不會開放），
+其他職業全部開放。
+
+2.部分職業調整得意技，具體包括：
+   1）劍士得意技能為連擊和聖盾
+   2）戰斧戰士得意技能為乾坤一擲和崩擊
+   3）騎士得意技能為諸刃和護衛
+   4）弓箭手得意技能為亂射和陽炎
+   5）格鬥士取消得意技能崩擊和護衛
+   6）忍者取消得意技能陽炎
+🔶寵物🔶
+1.新增一級寵物捕捉點：
+妖花：芙蕾雅禁地內（242,373），殺人蜂：芙蕾雅禁地內（331,282）
+2.新增改造寵物
+深淵武裝骷髏、荒漠兔耳仙人掌、夜行貓人、墮落惡魔螃蟹、禁地妖花、迷幻歌妖。
+這6隻改造寵物可通過完成「寵物改造I」任務獲得。
+
+🔶技能🔶
+1.關於原版本 3.0 相關新增的技能，
+除了保留回力鏢專屬技能因果報應外，
+追月，迅速果斷，戒驕戒躁，騎士之譽，一石二鳥，一擊必中，毒擊，精神衝擊波等技能皆不會開放。
+
+2.因果報應可在禁地尋蹤任務後進行學習（專屬職業為飼養師，其他符合條件的職業也能學習）。
+
+3.寵物散步可在森羅萬象任務後進行學習。
+
+4.連擊將優化調整，減少攻擊次數，增加攻擊傷害，詳情見*連擊調整表。
+
+5.諸刃將優化調整，詳情見*諸刃調整表。
+
+6.亂射將優化調整，詳情見*亂射調整表。
+
+7.氣功彈將優化調整，詳情見*氣功彈調整表。
+
+8.混亂攻擊優化調整，詳情見*混亂攻擊調整表。
+
 ```
 
 ![824cae8bd84ef96e2a15d735ccefeb04](https://user-images.githubusercontent.com/78347270/117285490-0b743700-aea3-11eb-80cc-858b4af928a9.png)
