--- a/docs/announces/20210506.md
+++ b/docs/announces/20210506.md
@@ -5,7 +5,7 @@ lang: zh-CN
 
 <RouterBack />
 
-## 💡 上线游戏版本公示
+## 🔥 上线游戏版本公示
 
 
 ![181893780_248897547025057_2996103608647336706_n](https://user-images.githubusercontent.com/78347270/117285414-f5667680-aea2-11eb-8dc3-1629e1f63f5f.png)
@@ -64,3 +64,7 @@ lang: zh-CN
 
 ![824cae8bd84ef96e2a15d735ccefeb04](https://user-images.githubusercontent.com/78347270/117285490-0b743700-aea3-11eb-80cc-858b4af928a9.png)
 
+
+#### 参考任务 :scroll: [宠物改造I](/tasks/10)
+
+#### 参考链接： [魔力宝贝：永恒初心](https://cg.originmood.com/New.../zh_TW/mlbb_notice_4803.html)
