--- a/docs/announces/20210508.md
+++ b/docs/announces/20210508.md
@@ -38,4 +38,12 @@ lang: zh-CN
 
 ```
 
+- 1.0.2完整主程式連結
+
+https://mlbb-cdn.originmood.com/download/cg_origin.zip [下载链接](https://mlbb-cdn.originmood.com/download/cg_origin.zip)
+
+- 1.0.2更新檔連結
+
+https://mlbb-cdn.originmood.com/download/cg_launcher.zip [下载链接](https://mlbb-cdn.originmood.com/download/cg_launcher.zip)
+
 #### 参考链接： [Facebook 魔力宝贝：永恒初心](https://www.facebook.com/cg.originmood/posts/250390163542462)
