--- a/docs/tasks/10.md
+++ b/docs/tasks/10.md
@@ -27,11 +27,11 @@ lang: zh-CN
 
 #### 与【香蒂】(10,6)说话可花费1000G购得下列随机一种【改造图？】并传出迷宫
 
-- 等待公测会记录设计图详细 🏗️
+- 僵尸，綠口，兔耳，水蜘蛛，貓人，螃蟹，鳥人
 
 #### 与【雀儿普】说话可花费1000G购得下列随机一种【改造图？】并传出迷宫
 
-- 等待公测会记录设计图详细 🏗️
+- 是樹精。黃蝎，哥布林，掃把蝙蝠，武裝，妖花，仙人掌
 
 ##### 已知可能会出的改造宠物为
 
