--- a/docs/pets/1030.md
+++ b/docs/pets/1030.md
@@ -15,13 +15,13 @@ lang: zh-CN
 
 ### 💪 能力数值
 
-| 总档次       | 120 - 125            |
+| 总档次       | 120            |
 | :----------- |:-------------:|
-| 体力      | ?   <Stars :number="2" />  |
-| 力量      | ?   <Stars :number="2.5" />  |
-| 防御      | ?  <Stars :number="4.5" />  | 
-| 敏捷      | ?  <Stars :number="1" />  | 
-| 魔法      | ?  <Stars :number="3" />   | 
+| 体力      | 18   <Stars :number="2" />  |
+| 力量      | 23   <Stars :number="2.5" />  |
+| 防御      | 43  <Stars :number="4.5" />  | 
+| 敏捷      | 8  <Stars :number="1" />  | 
+| 魔法      | 28  <Stars :number="3" />   | 
 
 
 ### ⚖️ 属性
