--- a/docs/pets/1083.md
+++ b/docs/pets/1083.md
@@ -15,13 +15,13 @@ lang: zh-CN
 
 ### 💪 能力数值
 
-| 总档次       | 120 - 125          |
+| 总档次       |  125          |
 | :----------- |:-------------:|
-| 体力      | ?   <Stars :number="3.5" />  |
-| 力量      | ?   <Stars :number="1.5" />  |
-| 防御      | ?   <Stars :number="2" />  | 
-| 敏捷      | ?  <Stars :number="2.5" />  | 
-| 魔法      | ?  <Stars :number="4" />   | 
+| 体力      | 33   <Stars :number="3.5" />  |
+| 力量      | 13   <Stars :number="1.5" />  |
+| 防御      | 18   <Stars :number="2" />  | 
+| 敏捷      | 29  <Stars :number="2.5" />  | 
+| 魔法      | 38  <Stars :number="4" />   | 
 
 
 ### ⚖️ 属性
