--- a/docs/pets/1004.md
+++ b/docs/pets/1004.md
@@ -15,13 +15,13 @@ lang: zh-CN
 
 ### 💪 能力数值
 
-| 总档次       | 120 -125            |
+| 总档次       | 125            |
 | :----------- |:-------------:|
-| 体力      | ?   <Stars :number="2.5" />  |
-| 力量      | ?   <Stars :number="3" />  |
-| 防御      | ?  <Stars :number="1.5" />  | 
-| 敏捷      | ?  <Stars :number="4" />  | 
-| 魔法      | ?  <Stars :number="1.5" />   | 
+| 体力      | 25   <Stars :number="2.5" />  |
+| 力量      | 30   <Stars :number="3" />  |
+| 防御      | 15  <Stars :number="1.5" />  | 
+| 敏捷      | 40  <Stars :number="4" />  | 
+| 魔法      | 15  <Stars :number="1.5" />   | 
 
 
 ### ⚖️ 属性
