--- a/docs/pets/1155.md
+++ b/docs/pets/1155.md
@@ -15,13 +15,13 @@ lang: zh-CN
 
 ### 💪 能力数值
 
-| 总档次       | 120 - 125            |
+| 总档次       | 120            |
 | :----------- |:-------------:|
-| 体力      | ?   <Stars :number="1.5" />  |
-| 力量      | ?   <Stars :number="2" />  |
-| 防御      | ?   <Stars :number="1" />  | 
-| 敏捷      | ?  <Stars :number="4" />  | 
-| 魔法      | ?  <Stars :number="3.5" />   | 
+| 体力      | 15   <Stars :number="1.5" />  |
+| 力量      | 20   <Stars :number="2" />  |
+| 防御      | 10   <Stars :number="1" />  | 
+| 敏捷      | 40  <Stars :number="4" />  | 
+| 魔法      | 35  <Stars :number="3.5" />   | 
 
 
 ### ⚖️ 属性
