修改改造任务

--- a/docs/tasks/10.md
+++ b/docs/tasks/10.md
@@ -27,21 +27,33 @@ lang: zh-CN
 
 #### 与【香蒂】(10,6)说话可花费1000G购得下列随机一种【改造图？】并传出迷宫
 
-- 僵尸，綠口，兔耳，水蜘蛛，貓人，螃蟹，鳥人
+- 僵尸
+- 绿色口臭鬼
+- 兔耳吓人箱子
+- 水蜘蛛
+- 貓人
+- 恶魔螃蟹
+- 幻歌妖
 
 #### 与【雀儿普】说话可花费1000G购得下列随机一种【改造图？】并传出迷宫
 
-- 是樹精。黃蝎，哥布林，掃把蝙蝠，武裝，妖花，仙人掌
+- 树精
+- 黃蝎
+- 烈风哥布林
+- 扫把蝙蝠
+- 武裝骷髅
+- 妖花
+- 兔耳仙人掌
 
 ##### 已知可能会出的改造宠物为
 
-- 改造僵尸
-- 深渊武装骷髅
-- 荒漠兔耳仙人掌
-- 夜行猫人
-- 堕落恶魔螃蟹
-- 禁地妖花
-- 迷幻歌妖
+- [改造僵尸](/pets/1022)
+- [深渊武装骷髅](/pets/1030)
+- [荒漠兔耳仙人掌](/pets/1091)
+- [夜行猫人](/pets/1004)
+- [堕落恶魔螃蟹](/pets/1125)
+- [禁地妖花](/pets/1083)
+- [迷幻歌妖](/pets/1155)
 
 
 | 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
