--- a/docs/tasks/10.md
+++ b/docs/tasks/10.md
@@ -58,7 +58,6 @@ lang: zh-CN
 
 | 任务物品 | 物品名 | 物品属性 | 丢 | 邮 |
 | :---- |:-------------:|:-------------:|:-------------:|:-------------:|
-| ![15529](https://user-images.githubusercontent.com/78347270/117288988-129d4400-aea7-11eb-84f1-6b7943b1b516.gif)
- |  设计图？  |  xx改造图的其中一张  |  ✅  |  ✅  |
+| ![15529](https://user-images.githubusercontent.com/78347270/117288988-129d4400-aea7-11eb-84f1-6b7943b1b516.gif) |  设计图？  |  xx改造图的其中一张  |  ✅  |  ✅  |
 
 
