--- a/docs/pets/1004.md
+++ b/docs/pets/1004.md
@@ -17,11 +17,11 @@ lang: zh-CN
 
 | 总档次       | 125            |
 | :----------- |:-------------:|
-| 体力      | 23 ~ 27   <Stars :number="2.5" />  |
-| 力量      | 28 ~ 32  <Stars :number="3" />  |
-| 防御      | 13 ~ 17  <Stars :number="1.5" />  | 
-| 敏捷      | 38 ~ 42  <Stars :number="4" />  | 
-| 魔法      | 13 ~ 17  <Stars :number="1.5" />   | 
+| 体力      | 24   <Stars :number="2.5" />  |
+| 力量      | 31  <Stars :number="3" />  |
+| 防御      | 16  <Stars :number="1.5" />  | 
+| 敏捷      | 40  <Stars :number="4" />  | 
+| 魔法      | 14  <Stars :number="1.5" />   | 
 
 
 ### ⚖️ 属性
