--- a/docs/pets/1133.md
+++ b/docs/pets/1133.md
@@ -1,14 +1,14 @@
 ---
-title: '大地翼龙'
+title: '变异龙祖'
 lang: zh-CN
 
 ---
 
 <RouterBack />
 
-## 大地翼龙
+## 变异龙祖
 
-![大地翼龙](https://user-images.githubusercontent.com/78347270/115959064-51e1a180-a545-11eb-9016-eb70673977b4.gif) 
+![变异龙祖](https://user-images.githubusercontent.com/78347270/123658767-fc8b7e80-d86c-11eb-835e-40b4d350c63e.gif) 
 
 > 龙系 , 不可封印 :x:
 
